--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     width:20vw;
     height:100%;
     background-color: rgba(165, 165, 165, .5);
-    z-index: 1;
+    z-index: 2;
     padding:1%;
     font-size: 1vw;
     overflow:scroll;
@@ -71,4 +71,15 @@ input[type = 'checkbox']{
 #settings{
     position: absolute;
     z-index: 2;
+}
+#body-border{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width:100%;
+    height:100%;
+    box-sizing: border-box;
+    border:1px solid red;
+    visibility: hidden;
 }
